<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.dollmar.svc</groupId>
	<artifactId>DepCon</artifactId>
	<version>1.4</version>
	<name>A simple tool to list/view/explore Java software dependencies</name>


	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<final.artifact.name>DepCon</final.artifact.name>
		<main.class>net.dollmar.svc.depcon.Main</main.class>

		<version.derby>10.14.2.0</version.derby>
		<version.gson>2.10.1</version.gson>
        <version.hibernate>5.6.15.Final</version.hibernate>
		<version.slf4j>1.7.5</version.slf4j>
		<version.sparkjava>2.9.4</version.sparkjava>
		<version.apache.commons.codec>1.15</version.apache.commons.codec>
		<version.jaxb-core>2.3.0.1</version.jaxb-core>
		<version.jaxb-api>2.3.1</version.jaxb-api>
		<version.javassist>3.22.0-GA</version.javassist>

		<version.junit>4.13.1</version.junit>
		<version.molecule>0.13.0</version.molecule>
		<version.hamcrest>2.0.0.0</version.hamcrest>

		<version.maven-jar.plugin>2.2</version.maven-jar.plugin>
		<version.dependency-check.plugin>8.2.1</version.dependency-check.plugin>
		<version.shade.plugin>2.4.2</version.shade.plugin>
		<version.maven-site-plugin>3.7.1</version.maven-site-plugin>
		<version.maven-surefire-report.plugin>2.19.1</version.maven-surefire-report.plugin>
		<version.maven-project-info-reports-plugin>3.0.0</version.maven-project-info-reports-plugin>
		<version.cobertura-maven.plugin>2.7</version.cobertura-maven.plugin>
		<version.findbugs-maven.plugin>3.0.0</version.findbugs-maven.plugin>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-core</artifactId>
			<version>${version.sparkjava}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${version.slf4j}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${version.gson}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>${version.derby}</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${version.apache.commons.codec}</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${version.hibernate}</version>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>${version.javassist}</version>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${version.junit}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.vtence.molecule</groupId>
			<artifactId>molecule</artifactId>
			<version>${version.molecule}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>java-hamcrest</artifactId>
			<version>${version.hamcrest}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>${final.artifact.name}</finalName>
		<plugins>
			<!-- create distributable -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${version.maven-jar.plugin}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

            <!-- OWASP Dependency Check  -->
            <plugin>
              <groupId>org.owasp</groupId>
              <artifactId>dependency-check-maven</artifactId>
              <version>${version.dependency-check.plugin}</version>
              <configuration>
                  <failBuildOnCVSS>8</failBuildOnCVSS>
                  <skipProvidedScope>true</skipProvidedScope>
              </configuration>
              <executions>
                  <execution>
                      <goals>
                          <goal>check</goal>
                      </goals>
                  </execution>
              </executions>
            </plugin>

			<!-- Maven Shade Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${version.shade.plugin}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>${main.class}</mainClass>
						</transformer>
					</transformers>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${version.maven-site-plugin}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${version.maven-project-info-reports-plugin}</version>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<!-- JUnit Report -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${version.maven-surefire-report.plugin}</version>
			</plugin>
			<!-- Code Coverage Report -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${version.cobertura-maven.plugin}</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<!-- Findbugs Report -->
			<!--plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>findbugs-maven-plugin</artifactId> 
				<version>${version.findbugs-maven.plugin}</version> </plugin -->
		</plugins>
	</reporting>

</project>
